# poor-cli

./: .dockerignore  .env.deploy.example  .env.example  .eslintrc.json  .gitignore  .golangci.yml  .goreleaser.yml  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  DEMO-SCRIPT.md  DOC.md  Dockerfile  FOR-CLAUDE-TOD0.md  IDEA.md  LAUNCH.md  LICENSE  LONGTERM-TODO.md  MANIFEST.in  MASTER-ROADMAP.md  MCP_REGISTRY_LISTINGS.md  MIGRATION.md  Makefile  NEXT-TODO.md  PAIN-POINTS.md  PHASE1.md  PHASE2.md  PHASE4.md  PHASE5.md  PIVOT_NOTES.md  PIVOT_PLAN_PHASE3.md  PROPOSAL-D-DISCOVERY.md  PROPOSAL-E-FRUGALITY.md  (+66 more)
_archived/poor-cli-tui/: Cargo.toml  run_tui.sh
_archived/poor-cli-tui/src/: backend.rs  command_manifest.rs  commands_lib.rs  env_editor.rs  handler.rs  handler_lib.rs  main.rs  multiplayer.rs  multiplayer_lib.rs  onboarding.rs  provider_catalog.rs  rpc_wrappers.rs  submit.rs  watcher.rs
legacy/junas/backend/: .env.example  Dockerfile  pyproject.toml
legacy/junas/src-tauri/: Cargo.toml  tauri.conf.json
poor-cli-desktop/src-tauri/: Cargo.toml  tauri.conf.json
poor-cli-desktop/src-tauri/capabilities/: default.json
poor-cli-desktop/src-tauri/src/: commands.rs  main.rs  state.rs
poor-cli-tui/: Cargo.toml
poor-cli-tui/src/: app.rs  backend.rs  command_manifest.rs  commands.rs  event.rs  handler.rs  helpers.rs  input.rs  lib.rs  main.rs  markdown.rs  multiplayer.rs  multiplayer_lib.rs  onboarding.rs  payloads.rs  rpc.rs  rpc_wrappers.rs  session.rs  submit.rs  theme.rs  ui.rs  watcher.rs  workspace.rs
poor-cli-tui/src/app/: mod.rs  types.rs
poor-cli-tui/src/commands/: automation_cmds.rs  checkpoint_cmds.rs  collab.rs  collab_cmds.rs  config_cmds.rs  context.rs  context_cmds.rs  mod.rs  output_cmds.rs  provider.rs  review_cmds.rs  session_cmds.rs  system_cmds.rs  tasks.rs
poor-cli-tui/src/input/: mod.rs  mode_handlers.rs
poor-cli-tui/src/rpc/: client_methods.rs  commands.rs  mod.rs  worker.rs
poor-cli-tui/src/ui/: chat.rs  mod.rs  overlays.rs
seuss/: .gitignore  pyproject.toml
seuss/docs/: RESEARCH_ROADMAP.md
seuss/src/seuss/: __init__.py  __main__.py  config.py  jsonl_store.py  jugemu.py  pathing.py  utils.py
seuss/tests/: test_chat_cmd.py  test_ingest_hardening.py  test_inspect_modes.py  test_reset_cmd.py
wok/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  FRONTEND-REWORK.md  README.md  README2.md  STYLE.md  TODO.md  TODO_30MARCH.md  URGENT-TODO-FOR-OPTIMISATION.md  deny.toml  for-clawed-2-do.md  todo.md
wok/.github/scripts/: lua_api_lint.sh  perf_gate.sh
wok/.github/workflows/: ci.yml  release.yml
wok/docs/: ARCHITECTURE.md  CLAUDE.md  CLI.md  CLI_CODING_AGENTS.md  CONFIGURATION.md  INTERVIEW.md  LUA_API_STABILITY.md  LUA_SCRIPTING.md  PERFORMANCE_BENCHMARKS.md  PLUGIN_BRIDGE.md  RELEASE_HARDENING.md  REMOTE_RPC.md  REMOTE_RPC_SCHEMA_V1.json  STYLE.md  todo.md  wok.d.lua
wok/docs/examples/: full.lua  minimal.lua  powerful.lua
wok/packaging/linux/: build_appimage.sh  build_deb.sh  walk.desktop  wok.desktop
wok/packaging/macos/: Info.plist  bundle.sh
wok/scripts/: manual-triage-wok.sh
wok/shell-integration/: bash.sh  fish.fish  zsh.zsh
wok/themes/: catppuccin.toml  ghostty-wok-dark.toml  graph-box-dark.toml  graph-box-day.toml  graph-box-neon.toml  gruvbox-dark.toml  gruvbox-wok-dark.toml  gruvbox-wok-day.toml  gruvbox-wok-neon.toml  nord.toml  paper-light.toml  solarized-dark.toml  tokyo-night.toml  wok-clean-dark.toml
wok/walk-app/: Cargo.toml
wok/walk-app/src/: action_effects.rs  action_parser.rs  app.rs  block_query.rs  cli_runtime.rs  command_search.rs  config.rs  daemon.rs  dpi.rs  event_loop.rs  handler.rs  input.rs  input_codec.rs  ipc.rs  jsonrpc_params.rs  keybindings.rs  lib.rs  main.rs  plugin_host.rs  remote_control.rs  remote_runtime.rs  render_runtime.rs  rpc_cli.rs  scripting.rs  session.rs  window.rs  workspace.rs  workspace_runtime.rs
wok/walk-app/tests/: daemon_lifecycle.rs  daemon_stress.rs
wok/walk-blocks/: Cargo.toml
wok/walk-blocks/src/: block.rs  block_nav.rs  block_search.rs  lib.rs  semantic.rs  triggers.rs
wok/walk-input/: Cargo.toml
wok/walk-input/src/: buffer.rs  completion.rs  cursor_ops.rs  editor.rs  highlighter.rs  history.rs  lib.rs
wok/walk-renderer/: Cargo.toml
wok/walk-renderer/src/: atlas.rs  compositor.rs  damage.rs  font.rs  gpu.rs  inline_images.rs  lib.rs  pipeline.rs  render_pipeline.rs  terminal.wgsl  text_layout.rs
wok/walk-terminal/: Cargo.toml
wok/walk-terminal/src/: async_io.rs  config.rs  lib.rs  prompt.rs  pty.rs  replay.rs  shell.rs  shell_integration.rs  sixel.rs  state.rs  terminal.rs
wok/walk-ui/: Cargo.toml
wok/walk-ui/src/: background.rs  bell.rs  clipboard.rs  command_palette.rs  layout.rs  layout_presets.rs  lib.rs  links.rs  quick_select.rs  replay_overlay.rs  search.rs  selection.rs  splits.rs  status_bar.rs  tab_bar.rs  theme.rs  theme_loader.rs  vi_mode.rs  viewport.rs  zoom.rs
wok/wok-app/: Cargo.toml
wok/wok-app/benches/: large_workspace.rs
wok/wok-app/src/: action_effects.rs  action_parser.rs  app.rs  block_query.rs  cli_runtime.rs  command_search.rs  config.rs  daemon.rs  event_loop.rs  frame_clock.rs  handler.rs  input.rs  input_codec.rs  ipc.rs  jsonrpc_params.rs  keybindings.rs  keybindings_toml.rs  lib.rs  main.rs  media_preview.rs  perf_metrics.rs  plugin_host.rs  remote_control.rs  remote_runtime.rs  render_runtime.rs  rpc_cli.rs  (+7 more)
wok/wok-blocks/: Cargo.toml
wok/wok-channels/: Cargo.toml
wok/wok-features/: Cargo.toml
wok/wok-fuzzy/: Cargo.toml
wok/wok-git/: Cargo.toml
wok/wok-input/: Cargo.toml
wok/wok-input-classifier/: Cargo.toml
wok/wok-integration/: Cargo.toml
wok/wok-keymap/: Cargo.toml
wok/wok-process/: Cargo.toml
wok/wok-renderer/: Cargo.toml
wok/wok-settings/: Cargo.toml
wok/wok-settings-derive/: Cargo.toml
wok/wok-sumtree/: Cargo.toml
wok/wok-terminal/: Cargo.toml
wok/wok-ui/: Cargo.toml
wok/wok-ui-core/: Cargo.toml
wok/wok-vim/: Cargo.toml
wok/wok-watcher/: Cargo.toml
(+2797 files in other folders)
