[package]
name = "seuss"
version = "1.0.0"
edition = "2021"
description = "A DSL for modeling and visualizing temporal narratives"
license = "MIT"
repository = "https://github.com/gongahkia/seuss"
keywords = ["dsl", "timeline", "visualization", "narrative"]
categories = ["command-line-utilities", "visualization"]
readme = "README.md"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
svg = "0.17"
uuid = { version = "1", features = ["v4"] }
resvg = "0.44"
printpdf = "0.7"

[[bin]]
name = "seuss"
path = "src/main.rs"
