[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poor-cli"
dynamic = ["version"]
description = "AI-powered CLI tool with multi-provider support (Gemini, OpenAI, Claude, Ollama)"
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = "MIT"
authors = [
    {name = "poor-cli contributors", email = "contributors@poor-cli.dev"}
]
keywords = ["ai", "cli", "gemini", "openai", "claude", "ollama", "coding-assistant", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "google-genai>=1.0.0",
    "jmespath>=1.0.1",
    "rich>=13.0.0",
    "PyYAML>=6.0",
    "aiofiles>=23.0.0",
    "aiohttp>=3.9.0",
    "aiortc>=1.14,<1.15",
    "cryptography>=41.0.0",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
openrouter = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
litellm = ["litellm>=1.50.0"]
hf-local = ["torch", "transformers", "accelerate"]
multiplayer = ["aiortc>=1.14,<1.15"]
compression = ["llmlingua>=0.2.0"]
keyring = ["keyring>=24.0.0"]
repo-map = [
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-lua",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-rust",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9.0",
]
all = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "litellm>=1.50.0",
    "aiortc>=1.14,<1.15",
    "llmlingua>=0.2.0",
    "keyring>=24.0.0",
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-lua",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-rust",
]

[project.scripts]
poor-cli = "poor_cli.__main__:main"
poor-cli-server = "poor_cli.server:main"

[project.urls]
Homepage = "https://github.com/gongahkia/poor-cli"
Repository = "https://github.com/gongahkia/poor-cli"
Issues = "https://github.com/gongahkia/poor-cli/issues"

[tool.setuptools.packages.find]
include = ["poor_cli*"]

[tool.setuptools.package-data]
poor_cli = ["*.json", "skills/*.md"]

[tool.setuptools.dynamic]
version = {attr = "poor_cli.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x -q --tb=short"

[tool.coverage.run]
source = ["poor_cli"]
omit = ["poor_cli/__pycache__/*"]

[tool.coverage.report]
show_missing = true
fail_under = 40
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
