[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "haus"
version = "0.1.0"
description = "Vectorize raster floor plan images into clean wall-polygon PNGs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{ name = "Codex" }]
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
  "numpy>=1.26",
  "opencv-python-headless>=4.10",
  "trimesh[easy]>=4.0",
  "mcp>=1.0",
  "starlette>=0.36",
  "uvicorn>=0.27",
]

[project.scripts]
haus = "haus.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4", "pyright>=1.1"]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.30"]
gemini = ["google-generativeai>=0.5"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
haus = [
  "corpus/library/*.json",
  "viewer/*.html",
  "viewer/*.json",
  "viewer/css/*.css",
  "viewer/js/*.js",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
