[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poor-cli"
version = "6.0.0a1"
description = "Deterministic orchestration runtime for local AI coding agents."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = "MIT"
authors = [{name = "poor-cli contributors", email = "contributors@poor-cli.dev"}]
keywords = ["ai", "cli", "coding-agent", "orchestration", "replay", "sqlite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "textual>=0.80",
    "tree-sitter>=0.25,<0.26",
    "tree-sitter-javascript>=0.25,<0.26",
    "tree-sitter-python>=0.25,<0.26",
    "tree-sitter-typescript>=0.23,<0.24",
    "watchfiles>=1.2,<2",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.17",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9.0",
]
bench = [
    "datasets==4.8.4",
    "swebench==4.1.0",
    "tqdm==4.67.3",
]
providers = [
    "anthropic>=0.60",
    "google-genai>=1.0",
    "openai>=1.99",
]
providers-extra = [
    "anthropic>=0.60",
    "google-genai>=1.0",
    "openai>=1.99",
]

[project.scripts]
poor-cli = "poor_cli.cli:main"

[project.urls]
Homepage = "https://github.com/gongahkia/poor-cli"
Repository = "https://github.com/gongahkia/poor-cli"
Issues = "https://github.com/gongahkia/poor-cli/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["poor_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
norecursedirs = ["tests/fixtures"]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
