cabal-version:      3.0
name:               seuss-hs
version:            0.1.0.0
synopsis:           Seuss timeline DSL and terminal explorer
description:        Haskell implementation of Seuss with parsing, evaluation, validation, SVG export, REPL, LSP, and a Brick-based TUI.
license:            MIT
license-file:       LICENSE
author:             OpenAI Codex
maintainer:         none@example.com
build-type:         Simple
extra-doc-files:    README.md

common common-settings
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:
        base >=4.16 && <5,
        aeson >=2.0,
        brick >=2.1,
        bytestring >=0.11,
        containers >=0.6,
        directory >=1.3,
        filepath >=1.4,
        megaparsec >=9.2,
        mtl >=2.2,
        optparse-applicative >=0.18,
        parser-combinators >=1.3,
        text >=2.0,
        time >=1.11,
        tomland >=1.3,
        vector >=0.13,
        vty >=6.1

library
    import: common-settings
    hs-source-dirs: src
    exposed-modules:
        Seuss.CLI.Options
        Seuss.Config.Loader
        Seuss.Core.Diff
        Seuss.Core.Eval
        Seuss.Core.Validation
        Seuss.Import.CSV
        Seuss.Import.GEDCOM
        Seuss.Import.JSONLD
        Seuss.Lang.AST
        Seuss.Lang.Parser
        Seuss.Model.Types
        Seuss.Render.Layout
        Seuss.Render.SVG
        Seuss.Tooling.LSP
        Seuss.Tooling.Syntax
        Seuss.TUI.App

executable seuss
    import: common-settings
    hs-source-dirs: app
    main-is: Main.hs
    build-depends:
        seuss-hs

test-suite seuss-hs-test
    import: common-settings
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Spec.hs
    build-depends:
        hspec >=2.11,
        seuss-hs
