[workspace]
members = [
    "wok-app",
    "wok-renderer",
    "wok-terminal",
    "wok-blocks",
    "wok-input",
    "wok-ui",
    "wok-process",
    "wok-fuzzy",
    "wok-watcher",
    "wok-channels",
    "wok-features",
    "wok-sumtree",
    "wok-settings",
    "wok-settings-derive",
    "wok-input-classifier",
    "wok-vim",
]
resolver = "2"


[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
