[package]
name = "walk-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Entry point and application shell for Walk terminal"

[dependencies]
walk-renderer = { path = "../walk-renderer" }
walk-terminal = { path = "../walk-terminal" }
walk-blocks = { path = "../walk-blocks" }
walk-input = { path = "../walk-input" }
walk-ui = { path = "../walk-ui" }
winit = "0.30"
wgpu = "24"
pollster = "0.4"
clap = { version = "4", features = ["derive"] }
mlua = { version = "0.10", features = ["lua54", "serialize", "vendored"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
