[package]
name = "walk-input"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Gap buffer editor, cursor ops, syntax highlighting, and history for Walk terminal"

[dependencies]
walk-terminal = { path = "../walk-terminal" }
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
