[package]
name = "walk-terminal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Terminal emulation and PTY management for Walk terminal"

[dependencies]
alacritty_terminal = "0.25"
portable-pty = "0.8"
crossbeam-channel = "0.5"
thiserror = "2"
tracing = "0.1"
tempfile = "3"
image = "0.25"
base64 = "0.22"
