[package]
name = "wok"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Wok terminal emulator"
default-run = "wok"

[lib]
name = "wok_app"
path = "src/lib.rs"

[[bench]]
name = "large_workspace"
harness = false

[dependencies]
wok-renderer = { path = "../wok-renderer" }
wok-terminal = { path = "../wok-terminal" }
wok-blocks = { path = "../wok-blocks" }
wok-input = { path = "../wok-input" }
wok-ui = { path = "../wok-ui" }
wok-process = { path = "../wok-process" }
wok-channels = { path = "../wok-channels" }
wok-features = { path = "../wok-features" }
winit = "0.30"
wgpu = "24"
pollster = "0.4"
clap = { version = "4", features = ["derive"] }
mlua = { version = "0.10", features = ["lua54", "serialize", "vendored"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
sysinfo = "0.36.1"

[target.'cfg(target_os = "macos")'.dependencies]
muda = { version = "0.17", default-features = false }

[dev-dependencies]
criterion = "0.5"
