[package]
name = "wok-blocks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Block detection, navigation, search, and metadata for Wok terminal"

[dependencies]
wok-terminal = { path = "../wok-terminal" }
thiserror = "2"
tracing = "0.1"
regex = "1"
