[package]
name = "wok-renderer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "GPU rendering, glyph atlas, and text layout for Wok terminal"

[dependencies]
wgpu = "24"
bytemuck = { version = "1", features = ["derive"] }
cosmic-text = "0.12"
unicode-width = "0.2"
image = "0.25"
thiserror = "2"
tracing = "0.1"
