[package]
name = "wok-settings-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "#[derive(Settings)] proc-macro for Wok"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
