[package]
name = "wok-settings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Settings store + derive for Wok"

[dependencies]
wok-settings-derive = { path = "../wok-settings-derive" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
