[package]
name = "wok-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Layout, tabs, splits, viewport, theme, clipboard, selection, and search for Wok terminal"

[dependencies]
wok-renderer = { path = "../wok-renderer" }
wok-terminal = { path = "../wok-terminal" }
wok-blocks = { path = "../wok-blocks" }
wok-process = { path = "../wok-process" }
wok-fuzzy = { path = "../wok-fuzzy" }
wok-watcher = { path = "../wok-watcher" }
wok-input = { path = "../wok-input" }
wok-git = { path = "../wok-git" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
arboard = "3"
image = "0.25"
notify = "6"
thiserror = "2"
tracing = "0.1"
regex = "1"
